Add endpoint for attachment upload.
