# api/controllers/hello_world.js
@@ -11,6 +11,11 @@
   It is a good idea to list the modules that your application depends on in the package.json in the project root
  */
 var util = require('util');
+var nodemailer = require('nodemailer');
+var multer = require('multer');
+var fs = require('fs');
+var idGenerator = require('../helpers/idgenerator')
+
 
 /*
  Once you 'require' a module you can reference the things that it exports.  These are defined in module.exports.
@@ -25,7 +30,8 @@ var util = require('util');
   we specify that in the exports of this module that 'hello' maps to the function named 'hello'
  */
 module.exports = {
-  hello: hello
+  hello: hello,
+  attachment: attachment
 };
 
 /*
@@ -34,11 +40,47 @@ module.exports = {
   Param 1: a handle to the request object
   Param 2: a handle to the response object
  */
+var transport = nodemailer.createTransport({
+  host: "smtp.gmail.com",
+  port: 587,
+  auth: {
+      user: "testmailputoczky@gmail.com",
+      pass: "aqdkwmlqugidynww"
+  }
+});
+var mailOptions = {
+  from: 'testmailputoczky@gmail.com',
+  to: 'david.putoczky@gmail.com',
+  subject: 'Welcome Email'
+};
+
+var ids = new Array();
+
+multer({ dest: './uploads'});
 function hello(req, res) {
   // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-  var name = req.swagger.params.name.value || 'stranger';
-  var hello = util.format('Hello, %s!', name);
-
-  // this sends back a JSON response which is a single string
+  var hello = util.format('Hello, Dávid',);
+  transport.sendMail(mailOptions, (error, info) => {
+    if (error) {
+        return console.log(error);
+    }
+    console.log('Message sent: %s', info.messageId);
+  });
   res.json(hello);
+}
+
+function attachment(req, res){
+  var file = req.swagger.params.file.value;
+  var path = 'uploads/';
+  var id = idGenerator.generator();
+  var fileExtension = file.originalname.slice(file.originalname.lastIndexOf("."));
+  fs.writeFile( path + id + fileExtension, file.buffer , function (err) {
+    if (err) {
+      debug(err);
+      var err = {
+        message: 'File not uploaded'
+      };
+      return next(err);
+    }
+  });
 }
